css/menubar_kit_profile.css
nav {
    display: flex;
    justify-content: space-between;
    background-color: #000000;
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 99999;

}

.dropdown_content {
    display: none;
    position: absolute;
    background-color: #000000;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
    z-index: 1;
}

.dropdown_content div {
    color: rgb(251, 251, 251);
    padding: 12px 16px;
    text-decoration: none;
    display: block;
}


#title_bar a {
    font-family: Arial, Helvetica, sans-serif;
    color: white;
    text-decoration: none;
    font-size: clamp(20px, 3vw, 48px);
    margin-left: 20px;
    margin-right: 25vw;
    white-space: nowrap;
    cursor: pointer;
}

#title_bar a span {
    color: #d8b112;
}

#topic {
    display: flex;
}


.profile:hover .dropdown_content {
    display: block;
}

.dropdown_content div:hover {
    background-color: #5c5c5c;
}

.menu_bar {

    font-family: Arial, Helvetica, sans-serif;
    font-size: clamp(16px, 3vw, 48px);

    list-style-type: none;
    margin: 0;
    padding: 0;

    display: flex;
    flex-wrap: nowrap;
    flex-direction: row;

    justify-content: space-around;

    white-space: nowrap;

}

.menu_bar li {
    display: inline;
}

.menu_bar li a {
    color: #d8b112;
    text-decoration: none;
    margin-right: 40px;
}


.menu_bar li a:hover {
    color: #464646;
}



/* for mobile nav bar*/

@media screen and (max-width: 750px) {


    nav {
        display: flex;
        flex-direction: column;
    }

    #title_bar {
        text-align: center;
    }

    #title_bar a {
        display: block;
        margin: 0;
        padding: 8px 16px;
        font-size: clamp(24px, 4vw, 72px);
    }

    .menu_bar {
        display: flex;
        flex-direction: column;
        list-style-type: none;
        margin: 0;
        padding: 0;
    }


    .menu_bar li a {
        margin: 0;
        padding: 8px 16px;

        font-size: clamp(24px, 4vw, 72px);

        text-align: center;

        display: block;

        color: #d8b112;
        text-decoration: none;

        align-items: center;
    }

    .menu_bar li a :hover {
        background-color: #464646;
    }
}

